# TERNIFY

./: README.md  requirements.txt
cpp/: CMakeLists.txt  README.md  version.h.in
cpp/src/: align.cpp  align.hpp  common.hpp  getgriden.cpp  getgriden.hpp  grid.cpp  grid.hpp  lowEnerDihe.hpp  main.cpp  minimize_h.cpp  minimize_h.hpp  parameters.cpp  parameters.hpp  protac.cpp  protac.hpp  protein.cpp  protein.hpp  ternify.hpp
data/5t35/: e3.sdf  poi.sdf  protac.sdf
data/6bn7/: e3.sdf  poi.sdf  protac.sdf  tcs.inp
data/6boy/: e3.sdf  poi.sdf  protac.sdf  tcs.inp
data/6hax/: e3.sdf  poi.sdf
data/6hay/: e3.sdf  poi.sdf  protac.sdf  tcs.inp
data/6hr2/: e3.sdf  note  poi.sdf  protac.sdf  tcs.inp
data/6w7o/: e3.sdf  poi.sdf  protac.sdf  tcs.inp
data/6w8i/: e3.sdf  poi.sdf  protac.sdf  tcs.inp
data/6zhc/: e3.sdf  poi.sdf  protac.sdf  tcs.inp
data/7jto/: e3.sdf  poi.sdf  protac.sdf  tcs.inp
data/7jtp/: e3.sdf  poi.sdf  protac.sdf  tcs.inp
data/7khh/: e3.sdf  poi.sdf  protac.sdf
data/7pi4/: e3.sdf  poi.sdf  protac.sdf  tcs.inp
data/7q2j/: e3.sdf  poi.sdf  protac.sdf  tcs.inp
data/7s4e/: e3.sdf  poi.sdf  protac.sdf  tcs.inp
data/7z6l/: e3.sdf  poi.sdf  protac.sdf  tcs.inp
data/7z76/: e3.sdf  poi.sdf  protac.sdf  tcs.inp
data/7z77/: e3.sdf  poi.sdf  protac.sdf  tcs.inp
data/7znt/: e3.sdf  poi.sdf  protac.sdf
data/8bb2/: e3.sdf  poi.sdf  x.py
data/8bb3/: e3.sdf  poi.sdf  tcs.inp
data/8bb4/: e3.sdf  poi.sdf  protac.sdf  tcs.inp
data/8bb5/: e3.sdf  poi.sdf  protac.sdf  tcs.inp
data/8bds/: e3.sdf  poi.sdf
data/8bdt/: e3.sdf  poi.sdf  protac.sdf
data/8bdx/: e3.sdf  poi.sdf  protac.sdf
data/8beb/: e3.sdf  poi.sdf  protac.sdf  tcs.inp
data/8dso/: e3.sdf  poi.sdf  protac.sdf  tcs.inp
data/8fy0/: e3.sdf  note  poi.sdf  protac.sdf
data/8fy1/: e3.sdf  poi.sdf
data/8fy2/: e3.sdf  poi.sdf  protac.sdf  tcs.inp
data/8g1p/: e3.sdf  poi.sdf  protac.sdf
data/8g1q/: e3.sdf  poi.sdf  protac.sdf  tcs.inp
data/8pc2/: e3.sdf  poi.sdf  protac.sdf  tcs.inp
data/8qjr/: e3.sdf  poi.sdf  protac.sdf  tcs.inp
data/8qu8/: e3.sdf  poi.sdf  protac.sdf
data/8qvu/: e3.sdf  poi.sdf  tcs.inp
data/8qw6/: e3.sdf  poi.sdf  protac.sdf
data/8qw7/: e3.sdf  poi.sdf  protac.sdf
data/8r5h/: e3.sdf  poi.sdf  tcs.inp
data/wdr5/7jto_neutral/: protac.sdf
data/wdr5/8bb2/: protac.sdf
data/wdr5/input/: e3.sdf  poi.sdf  tcs_wdr5.inp
scripts/: rmsd.py  rmsd_m.py
src/: align.py  getgriden.py  grid.py  minimize_h.py  parameters.py  protac.py  protein.py  ternify.py
